--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p id="final-text" class="final-text" style="display: none">
           <strong>Valentine Date:</strong> Heladitos de pistacho y muchos besitos >:3
           <br>
-          <a href="../Arbol_De_Amor/index.html" target="_blank">Haz clic aquí para continuar</a>
+          <a href="./Arbol_De_Amor/inicio.html" target="_blank">Haz clic aquí para continuar</a>
         </p>
       </div>
     </div>
